--- a/package.json
+++ b/package.json
@@ -2,21 +2,20 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "build": "vite build",
-        "dev": "vite"
+        "dev": "vite",
+        "build": "vite build"
     },
     "devDependencies": {
         "@tailwindcss/typography": "^0.5.16",
-        "@tailwindcss/vite": "^4.0.0",
-        "axios": "^1.8.2",
-        "concurrently": "^9.0.1",
-        "laravel-vite-plugin": "^1.2.0",
-        "tailwindcss": "^4.0.0",
-        "vite": "^6.2.4"
+        "autoprefixer": "^10.4.21",
+        "laravel-vite-plugin": "^1.3.0",
+        "postcss": "^8.4.38",
+        "tailwindcss": "^3.3.5",
+        "vite": "^5.2.0"
     },
     "dependencies": {
         "alpinejs": "^3.14.9",
-        "easymde": "^2.20.0",
+        "axios": "^1.11.0",
         "trix": "^2.1.15"
     }
 }
