--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     },
     "dependencies": {
         "alpinejs": "^3.14.9",
-        "axios": "^1.11.0",
-        "trix": "^2.1.15"
+        "axios": "^1.11.0"
     }
 }
